--- a/index.htm
+++ b/index.htm
@@ -434,7 +434,7 @@ padding:25px 60px
 <div class="row mt-3">
 <div class="col-md-12">
 <div class="logo text-center">
-<img width="300px" height="83px" src="assets/img/logo.png" alt="toto macau online" style="max-width: 250px; height: auto;margin-left: auto;margin-right: auto;">
+<img width="300px" height="83px" src="assets/img/logo-togel-online.png" alt="toto macau online" style="max-width: 250px; height: auto;margin-left: auto;margin-right: auto;">
 </div>
 </div>
 </div>
