--- a/amp/index.htm
+++ b/amp/index.htm
@@ -450,7 +450,7 @@ padding:25px 60px
 				<a href="https://rebrand.ly/totomacau" target="_blank" rel="nofollow noreferrer"><amp-img class="align-middle" style="margin-right: 15px;margin-bottom: 15px;" width="250px" height="81px" src="../assets/img/daftar.gif" alt="daftar toto macau"></a>
 				<a href="https://direct.lc.chat/12792840" rel="nofollow noopener noreferrer" target="_blank"><amp-img class="align-middle" style="margin-right: 15px;margin-bottom: 15px;" width="250px" height="81px" src="../assets/img/livechat.gif" alt="livechat agen Toto Macau terpercaya"></amp-img></a>
 				<a href="https://api.whatsapp.com/send/?phone=85517526243&text" rel="nofollow noopener noreferrer" target="_blank"><amp-img class="align-middle" style="margin-right: 15px;margin-bottom: 15px;" width="250px" height="81px" src="../assets/img/whatsapp.gif" alt="whatsapp situs Toto Macau"></amp-img></a>
-				<a href="https://rebrand.ly/totomacau" target="_blank" rel="nofollow noreferrer">amp-img class="align-middle" style="margin-right: 15px;margin-bottom: 15px;" width="250px" height="81px" src="../assets/img/login.gif" alt="login bandar toto macau"></amp-img></a>
+				<a href="https://rebrand.ly/totomacau" target="_blank" rel="nofollow noreferrer"><amp-img class="align-middle" style="margin-right: 15px;margin-bottom: 15px;" width="250px" height="81px" src="../assets/img/login.gif" alt=login bandar toto macau"></amp-img></a>
 		</div>
 		<div class="row">
 			<div class="col-md-12 mb-2">
