--- a/amp/index.htm
+++ b/amp/index.htm
@@ -7,7 +7,7 @@
 <title>TOTO MACAU | DAFTAR TOTO MACAU ONLINE | BANDAR TOGEL MACAU</title>
 <link rel="amphtml" href="http://34.101.86.187/amp">
 <link rel="canonical" href="http://34.101.86.187/">
-<link rel="shortcut icon" href="assets/img/fav-178.png" sizes="16x16">
+<link rel="shortcut icon" href="../assets/img/fav-178.png" sizes="16x16">
 <link href="http://34.101.86.187/" rel="dns-prefetch">
 <meta name="description" content="Togel178 merupakan bandar toto macau terpercaya yang membuka daftar togel online macau resmi secara gratis. Kami juga memiliki pasaran agen togel terlengkap di Indonesia 2021.">
 <meta name="keywords" content="toto macau, togel macau, togel pasaran macau, togel online macau, daftar togel macau, situs judi macau, agen togel macau, toto macau indonesia">
