--- a/index.htm
+++ b/index.htm
@@ -508,7 +508,7 @@ padding:25px 60px
 <div class="word">
 <h1 style="text-align: center;"><strong>Situs Agen Togel Toto Macau Terpercaya</strong></h1>
 <p style="text-align: justify;"><br></p>
-<p style="text-align: justify;"><a href="a.co" rel="noopener noreferrer" target="_blank" title="toto macau">Toto Macau</a> Merupakan Pasaran Togel Online yang saat ini menduduki Peringkat 3 Besar yang banyak sekali peminat di dalamnya. Sebuah permain togel modern yang memiliki jam result terbanyak dalam satu hari. Pasaran toto macau memiliki result sebanyak 4 kali dalam satu hari pada pukul 13:00 WIB, 16:00 WIB, 19:00 WIB dan 22:00 WIB di siarakan secara langsung melalui YouTube. Dan TOGEL178 Merupakan Salah satu Penjual Ticket Lottery Pada pasaran Tersebut.</p>
+<p style="text-align: justify;"><a href="/totomacau" rel="noopener noreferrer" target="_blank" title="toto macau">Toto Macau</a> Merupakan Pasaran Togel Online yang saat ini menduduki Peringkat 3 Besar yang banyak sekali peminat di dalamnya. Sebuah permain togel modern yang memiliki jam result terbanyak dalam satu hari. Pasaran toto macau memiliki result sebanyak 4 kali dalam satu hari pada pukul 13:00 WIB, 16:00 WIB, 19:00 WIB dan 22:00 WIB di siarakan secara langsung melalui YouTube. Dan TOGEL178 Merupakan Salah satu Penjual Ticket Lottery Pada pasaran Tersebut.</p>
 <p style="text-align: justify;">Permainan togel toto macau sendiri merupakan sebuah permainan togel yang berasal dari China, permainan toto macau saat ini menjadi salah satu pasaran togel online yang paling banyak di cari oleh masyarakat Indonesia.</p>
 <h2 style="text-align: justify;"><br></h2>
 <h2 style="text-align: center;"><strong>Toto Macau Memberikan Banyak Keuntungan Kepada Peminatnya</strong></h2>
