--- a/amp/index.htm
+++ b/amp/index.htm
@@ -443,7 +443,7 @@ padding:25px 60px
 		</div>
 		<div class="row">
 			<div class="slide col-md-12">
-					<amp-img src="../assets/img/situs-bandar-toto-macau-terpercaya-2021.jpg" width="100%" height="100%" layout="responsive" alt=" alt="situs Toto Macau terpercaya"></amp-img>
+					<amp-img src="../assets/img/situs-bandar-toto-macau-terpercaya-2021.jpg" width="1920" height="1080" layout="responsive" alt=" alt="situs Toto Macau terpercaya"></amp-img>
 			</div>
 		</div>
 		<div class="header-btn">
